methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
    recule()
          ^SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
    gauche()
          ^